desktop-themes/BlackMATE/gtk-3.0/gtk-widgets.css
/* ... */
.spinbutton .button:insensitive {
	color: shade(@insensitive_fg_color, 0.7);
}

/**************
 * Scrollbars *
 **************/
.scrollbar {
	background-image: none;
	border-style: solid;
	-GtkRange-trough-border: 0;
	-GtkScrollbar-has-backward-stepper: true;
	-GtkScrollbar-has-forward-stepper: true;
	-GtkRange-stepper-size: 16;
	-GtkRange-slider-width: 13;
	-GtkScrollbar-min-slider-length: 42; /* minimum size for the slider. sadly can't be in '.slider' where it belongs */
	-GtkRange-stepper-spacing: 0;
	-GtkRange-trough-under-steppers: 1;
}

.scrollbars-junction { /* the small square between scrollbars!!! */
    background-image: none;
    background-color: @less_dark_color;
    border-width: 0;
    border-radius: 0;
    border-image: none;
    box-shadow: none;
}

.scrollbar.trough,
.scrollbar.trough.vertical {
	background-image: linear-gradient(to right,
		@scrollbar_trough,
		shade (@scrollbar_trough, 1.08));
	border-left-width: 1px;
	border-style: solid;
	border-color: shade (@theme_bg_color, 0.94);
	border-radius: 0;
	border-image: none;
}

.scrollbar.trough.horizontal {
	background-image: linear-gradient(to bottom,
		@scrollbar_trough,
		shade (@scrollbar_trough, 1.08));
	border-top-width: 1px;
	border-style: solid;
	border-color: shade (@theme_bg_color, 0.94);
	border-radius: 0;
	border-image: none;
}

.scrollbar.button,
.scrollbar.button.horizontal,
.scrollbar.button.vertical {
	color: @theme_fg_color; /*@internal_element_color*/
	border-image: none;
	border-style: none;
	border-width: 0px;
	background-image: none;
	background-color: @less_dark_color;
}

.scrollbar.button:hover,
.scrollbar.button.horizontal:hover,
.scrollbar.button.vertical:hover {
	background-image: none;
	background-color: shade(@less_dark_color, 1.4);
	/*border-color: shade(@highlighted_border, 1.1);*/
	color: @theme_fg_color;
	border-image: none;
	border-style: none;
	border-width: 0px;
}

.scrollbar.button:hover:active,
.scrollbar.button.vertical:hover:active,
.scrollbar.button.horizontal:hover:active {
	background-color: @less_dark_color;
	background-image: linear-gradient(to top,
	                                  shade(@less_dark_color, 1.5),
	                                  shade(@less_dark_color, 0.86));
	color: @theme_fg_color;
	border-image: none;
	border-style: none;
	border-width: 0px;
	/*border-color: shade(@highlighted_border, 1.1);*/
}

.scrollbar.button:insensitive,
.scrollbar.button.horizontal:insensitive,
.scrollbar.button.vertical:insensitive {
	background-image: none;
	background-color: transparent;
	color: transparent;
	border-image: none;
	border-style: none;
	border-width: 0px;
}

.scrollbar.slider {
	background-color: transparent;
	background-image: linear-gradient(to top,
	                                  shade(@scroll_slider_color, 0.6),
	                                  shade(@scroll_slider_color, 1.6) 50%,
	                                  shade(@scroll_slider_color, 2.0));
	border-color: transparent;
	border-radius: 6px;
	border-width: 1px;
	border-image: none;
}

.scrollbar.slider.vertical {
	border-width: 1px;
	background-image: linear-gradient(to top,
	                                  shade(@scroll_slider_color, 0.6),
	                                  shade(@scroll_slider_color, 1.6) 50%,
	                                  shade(@scroll_slider_color, 2.0));
}

.scrollbar.slider.horizontal {
	border-width: 1px;
	background-image: linear-gradient(to left,
	                                  shade(@scroll_slider_color, 0.6),
	                                  shade(@scroll_slider_color, 1.6) 50%,
	                                  shade(@scroll_slider_color, 2.0));
}

.scrollbar.slider:prelight {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
}

.scrollbar.slider.vertical:prelight {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
}

.scrollbar.slider.horizontal:prelight {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
}

.scrollbar.slider:prelight:active {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
	background-image: linear-gradient(to top,
	                                  shade(@scroll_slider_color, 2.0),
	                                  shade(@scroll_slider_color, 1.6) 55%,
	                                  shade(@scroll_slider_color, 0.6));
}

.scrollbar.slider.vertical:prelight:active {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
	background-image: linear-gradient(to top,
	                                  shade(@scroll_slider_color, 2.0),
	                                  shade(@scroll_slider_color, 1.6) 55%,
	                                  shade(@scroll_slider_color, 0.6));
}

.scrollbar.slider.horizontal:prelight:active {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
	background-image: linear-gradient(to left,
	                                  shade(@scroll_slider_color, 2.0),
	                                  shade(@scroll_slider_color, 1.6) 55%,
	                                  shade(@scroll_slider_color, 0.6));
}

.scrollbar.slider:insensitive {
	background-image: none;
	background-color: shade(@theme_bg_color, 1.5);
}

.scrollbar.slider.fine-tune:prelight:active {
	background-image: url("assets/slider_fine_horizontal.svg"),
	                  linear-gradient(to top,
	                                  shade(@scroll_slider_color, 3.3),
	                                  shade(@scroll_slider_color, 1.6) 55%,
	                                  shade(@scroll_slider_color, 0.6));
	background-repeat: no-repeat;
	background-position: center;
}
/* ... */

